--- a/classes/_local_main_.services.capi.html
+++ b/classes/_local_main_.services.capi.html
@@ -85,6 +85,7 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.capi.html#createbackup" class="tsd-kind-icon">create<wbr>Backup</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.capi.html#purgecache" class="tsd-kind-icon">purge<wbr>Cache</a></li>
 							</ul>
 						</section>
@@ -93,6 +94,32 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="createbackup" class="tsd-anchor"></a>
+					<h3>create<wbr>Backup</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Backup<span class="tsd-signature-symbol">(</span>installId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, description<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L968">main.d.ts:968</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>installId: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5>description: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="purgecache" class="tsd-anchor"></a>
 					<h3>purge<wbr>Cache</h3>
@@ -103,7 +130,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L968">main.d.ts:968</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L970">main.d.ts:970</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -136,6 +163,9 @@
 					<li class="current tsd-kind-class tsd-parent-kind-namespace">
 						<a href="_local_main_.services.capi.html" class="tsd-kind-icon">CAPI</a>
 						<ul>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="_local_main_.services.capi.html#createbackup" class="tsd-kind-icon">create<wbr>Backup</a>
+							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.capi.html#purgecache" class="tsd-kind-icon">purge<wbr>Cache</a>
 							</li>
