--- a/classes/_local_main_.services.siteshellentry.html
+++ b/classes/_local_main_.services.siteshellentry.html
@@ -85,12 +85,9 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#create" class="tsd-kind-icon">create</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#createunix" class="tsd-kind-icon">create<wbr>Unix</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#createwin32" class="tsd-kind-icon">create<wbr>Win32</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#launchdarwin" class="tsd-kind-icon">launch<wbr>Darwin</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#launchlinux" class="tsd-kind-icon">launch<wbr>Linux</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#launchwin32" class="tsd-kind-icon">launch<wbr>Win32</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#createbatchentry" class="tsd-kind-icon">create<wbr>Batch<wbr>Entry</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#createshellentry" class="tsd-kind-icon">create<wbr>Shell<wbr>Entry</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteshellentry.html#launch" class="tsd-kind-icon">launch</a></li>
 							</ul>
 						</section>
 					</div>
@@ -99,16 +96,16 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="create" class="tsd-anchor"></a>
-					<h3>create</h3>
+					<a name="createbatchentry" class="tsd-anchor"></a>
+					<h3>create<wbr>Batch<wbr>Entry</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">create<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Batch<wbr>Entry<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L988">main.d.ts:988</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/main.d.ts#L994">main.d.ts:994</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -122,16 +119,16 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="createunix" class="tsd-anchor"></a>
-					<h3>create<wbr>Unix</h3>
+					<a name="createshellentry" class="tsd-anchor"></a>
+					<h3>create<wbr>Shell<wbr>Entry</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Unix<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Shell<wbr>Entry<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L990">main.d.ts:990</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/main.d.ts#L992">main.d.ts:992</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -145,85 +142,16 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="createwin32" class="tsd-anchor"></a>
-					<h3>create<wbr>Win32</h3>
+					<a name="launch" class="tsd-anchor"></a>
+					<h3>launch</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Win32<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">launch<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L992">main.d.ts:992</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>site: <a href="_local_.site.html" class="tsd-signature-type">Site</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="launchdarwin" class="tsd-anchor"></a>
-					<h3>launch<wbr>Darwin</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">launch<wbr>Darwin<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L994">main.d.ts:994</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>site: <a href="_local_.site.html" class="tsd-signature-type">Site</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="launchlinux" class="tsd-anchor"></a>
-					<h3>launch<wbr>Linux</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">launch<wbr>Linux<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L998">main.d.ts:998</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>site: <a href="_local_.site.html" class="tsd-signature-type">Site</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="launchwin32" class="tsd-anchor"></a>
-					<h3>launch<wbr>Win32</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">launch<wbr>Win32<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7c42e86/main.d.ts#L996">main.d.ts:996</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/f304b53/main.d.ts#L990">main.d.ts:990</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -254,22 +182,13 @@
 						<a href="_local_main_.services.siteshellentry.html" class="tsd-kind-icon">Site<wbr>Shell<wbr>Entry</a>
 						<ul>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.siteshellentry.html#create" class="tsd-kind-icon">create</a>
+								<a href="_local_main_.services.siteshellentry.html#createbatchentry" class="tsd-kind-icon">create<wbr>Batch<wbr>Entry</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.siteshellentry.html#createunix" class="tsd-kind-icon">create<wbr>Unix</a>
+								<a href="_local_main_.services.siteshellentry.html#createshellentry" class="tsd-kind-icon">create<wbr>Shell<wbr>Entry</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.siteshellentry.html#createwin32" class="tsd-kind-icon">create<wbr>Win32</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.siteshellentry.html#launchdarwin" class="tsd-kind-icon">launch<wbr>Darwin</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.siteshellentry.html#launchlinux" class="tsd-kind-icon">launch<wbr>Linux</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.siteshellentry.html#launchwin32" class="tsd-kind-icon">launch<wbr>Win32</a>
+								<a href="_local_main_.services.siteshellentry.html#launch" class="tsd-kind-icon">launch</a>
 							</li>
 						</ul>
 					</li>
